assets/stylesheets/babble.scss
$default-chat-width: 300px;

#babble-icon {
  position: relative;
}

#babble-file-input {
  display: none;
}

@media (min-width: 700px) {
  #main-outlet {
    &.chat-active--left { margin-left: $default-chat-width; }
    &.chat-active--right { margin-right: $default-chat-width; }
  }
}

/* Dropdown styles */

.babble-title-wrapper {
  line-height: 32px;
  @media (max-width: 700px) {
    font-size: 17px;
    line-height: 38px;
  }
}

.babble-sidebar {
  resize: horizontal;
  overflow: auto;
  width: $default-chat-width;
  min-width: $default-chat-width;
  max-width: 100%;
  height: calc(100% - 64px);
  position: fixed;
  background: white;
  z-index: 10;
  margin-top: 64px;
  box-shadow: 0 2px 2px rgba(0,0,0,0.25);
  &.expanded { width: 100% !important; }
  &.babble-sidebar--right { right: 0; }
  &.babble-sidebar--left  { left: 0; }
}

.babble-title h4 {
  flex-grow: 1;
  -webkit-flex-grow: 1;
  padding: 0 10px;
  margin-bottom: 0;
}

.babble-title i {
  color: #ccc;
}

.d-header .icons .babble-title [class^="fa fa-"] {
  font-size: 15px;
}

.babble-context-toggle {
  position: relative;
  outline: 0;
  padding: 0;
  text-align: center;
  display: inline-block;
  line-height: 20px;
  @media (max-width: 700px) { line-height: 35px; }
  vertical-align: top;
  z-index: 1;
  &:hover .babble-context-toggle-tooltip { opacity: 1; }
}

.babble-context-toggle-tooltip {
  opacity: 0;
  transition: .5s opacity;
  pointer-events: none;
  position: absolute;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
  background: #fefefe;
  font-size: 13px;
  line-height: 18px;
  color: black;
  padding: 5px;
  word-wrap: normal;
  min-width: 150px;
  left: 50%;
  top: 100%;
  transform: translate(-50%, 0);
  &:after {
    content: ' ';
    width: 7px;
    height: 7px;
    top: 0;
    left: 50%;
    transform: rotate(45deg) translate(-50%, 0);
    position: absolute;
    background: #fefefe;
  }
}

@-moz-document url-prefix() {
  .babble-context-toggle-tooltip {
    top: 25px;
  }
}

/* Post styles */
.babble-posts {
  margin: 0;
  width: 100%;
  overflow-x: hidden;
  overflow-y: auto;
}

.babble-load-more {
  text-align: center;
  border-bottom: 1px solid #ccc;
  margin-bottom: 10px;
}

.babble-load-message {
  display: inline-block;
  color: #ccc;
  border: 0;
  text-align: center;
  position: relative;
  top: 10px;
  margin: auto;
  background: white;
  padding: 0 10px;
  font-size: 12px;
}

.babble-post-new-day {
  border-bottom: 1px solid #ccc;
  position: relative;
  bottom: 15px;
  width: 100%;
  text-align: center;
}

.babble-post-new-day-message {
  margin: auto;
  position: relative;
  top: 10px;
  display: inline-block;
  color: #ccc;
  border: 0;
  background: white;
  padding: 0 10px;
  font-size: 11px;
  font-weight: bold;
  color: #999;
}

.babble-empty-topic-message {
  color: #ccc;
  text-align: center;
  padding: 25% 0;
}

.babble-post {
  width: 100%;
  display: inline-block;
  img {
    max-width: 100%;
    height: auto;
  }
}

.babble-post-avatar {
  cursor: pointer;
  float: left;
  margin-right: 6px;
  width: 32px;
  min-height: 1px;
}

.babble-post-content {
  overflow: hidden;
  position: relative;
  .babble-post-meta-data {
    width: 100%;
    display: inline-block;
    line-height: 14px;
    height: 14px;
    .babble-post-name {
      float: left;
    }
    .babble-post-date {
      padding-right: 10px;
      float: left;
      font-size: 0.929em;
      color: #bdbdbd;
    }
  }
  .onebox {
    margin-right: 20px;
  }
}

.babble-staged-post {
  opacity: 0.5;
  .spinner-container {
    position: absolute;
    top: 2px;
    right: 0;
  }
}

.babble-post-container {
  margin: 10px 10px 3px 0;

  &.babble-follow-on {
    margin: 3px 10px 3px 0;
  }
  &:hover {
    .babble-post-actions { opacity: 1; }
  }
  .babble-post-actions {
    position: absolute;
    right: 0;
    top: 1px;
    opacity: 0;
    background-color: #f8f8ff;
    i.fa {
      width: initial;
      height: initial;
      font-size: initial;
      line-height: initial;
      display: inline-block;
      color: dark-light-choose(scale-color($primary, $lightness: 50%), scale-color($secondary, $lightness: 50%));
      margin-left: 3px;
    }
  }
}

.babble-sidebar .spinner {
  height: 10px;
  width: 10px;
  margin: 0 auto;
}

.babble-deleted-post {
  font-style: italic;
}

.babble-post-user-deleted {
  .babble-post-avatar, .babble-post-body, .post-date, .babble-post-actions button { opacity: 0.5 }
  .cooked { font-size: 11px; }
}

.babble-post-staff-deleted {
  display: none;
}

.babble-post .babble-post-avatar a,
.babble-post .post-date {
  background-color: transparent !important; /* sorry mom. */
}

.babble-post:hover, .babble-available-topic:hover {
  background-color: #f8f8ff;
}

.babble-post-content .post-info {
  width: 32px;
  text-align: right;
}

.babble-post-content p {
  margin: 0;
}

.babble-post-edited {
  font-size: 11px;
  color: #ccc;
}

.babble-last-read-post-message {
  font-size: 8px;
  line-height: 10px;
  padding: 0 10px 0 5px;
  float: right;
}

.babble-last-read-wrapper {
  margin-top: 15px;
}

li.babble-post .babble-post-content a.mention {
  display: inline;
  padding: 0;
}

/* Available topic styles */
.babble-available-topics {
  padding-top: 10px !important; /* sorry mom. */
  margin: 0;
  list-style-type: none;
}

.babble-available-topic {
  line-height: 32px;
  display: flex;
  flex-direction: row;
  align-items: center;
  cursor: pointer;
  font-weight: bold;
  @media (max-width: 700px) {
    padding: 10px 20px;
  }
}

.babble-available-topic a {
  color: #888;
  float: left;
  width: 100%;
}

.babble-typing {
  text-align: right;
  font-size: 12px;
  line-height: 14px;
  min-height: 14px;
}

.babble-whos-online {
  float: right;
}

/* Composer styles */

.babble-post-composer {
  margin: 0 6px 4px;
  text-align: center;
  border-radius: 1px;
}

.babble-composer-wrapper {
  position: relative;
  flex-direction: row;
  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3);
  display: flex;
}

.babble-post-composer .widget-button {
  margin: 5px;
  padding: 5px 7px;
}

.babble-post-composer textarea {
  resize: none;
  border: none;
  width: 100%;
  flex-grow: 1;
  min-height: 30px;
  margin: 0;
}

.babble-composer-actions {
  display: flex;
  display: -webkit-flex;
  flex-direction: column;
  -webkit-flex-direction: column;
}

.babble-composer-action {
  font-size: 20px;
  background: none;
  border: none;
  padding: 5px;
  &:hover {
    color: black;
    background: #efefef;
  }
}

.babble-post-composer .btn-cancel {
  margin-top: 5px;
  margin-right: 5px;
}

.babble-post-composer .autocomplete {
  left: 15% !important;
  width: 70%;
  text-align: left;

  span.username {
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 60%;
  }

  span.name {
    float: right;
    width: inherit !important;
    max-width: 28%;
  }
}

.babble-post-composer .file-uploading {
  float: left;
  .spinner {
    vertical-align: middle;
  }
}

.babble-post .babble-post-body .cooked img {
  max-width: 223px; /* 12 extra px for Edge, don't ask... */
  height: auto;
}

.babble-composer .btn-primary {
  margin: 3px 1px;
}

.babble-composer-editing-buttons {
  margin: 5px 0;
  button { padding: 3px 6px; }
}

.babble-composer-error-message {
  color: red;
  font-size: 10px;
  padding-right: 10px;
}

.babble-create-post {
  float: none;
}

.babble-no-one-is-typing {
  min-height: 15px;
}

.babble-is-typing {
  text-align: right;
  font-size: 12px;
  margin-right: 10px;
  a.trigger-user-card img {
    width: 15px;
    height: 15px;
    margin: 0 5px;
  }
}

/* Shoutbox styles */
.babble-sidebar {

  .normalized {
    padding: 0 10px;
    border: none;
    background: none;
  }

  .babble-chat {
    height: 100%;
    display: flex;
    display: -webkit-flex;
    flex-direction: column;
    -webkit-flex-direction: column;
  }
  .babble-title-wrapper {
    z-index: 1;
    box-shadow: 0 2px 2px rgba(0,0,0,0.25);
    border-radius: 1px;
  }
  .babble-title {
    display: flex;
    -webkit-display: flex;
    flex-direction: row;
    -webkit-flex-direction: row;
    align-items: center;
    -webkit-align-items: center;
  }
  .babble-list {
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: auto;
    -webkit-flex-grow: 1;
    -webkit-flex-shrink: 1;
    -webkit-flex-basis: auto;
    overflow-x: hidden;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    height: 500px;
    margin: 0 7px;
  }
  .babble-post-composer-wrapper {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    display: -webkit-flex;
    -webkit-flex-direction: row;
    -webkit-align-items: flex-end;
  }

  .babble-last-read-wrapper {
    display: flex;
    -webkit-display: flex;
  }

  .babble-last-read-post-message {
    margin: auto;
  }

  .babble-last-read-post-line {
    position: absolute;
    left: 0;
    right: 0;
    z-index: -1;
  }
  .spinner {
    width: 8px;
    height: 8px;
  }
}

.babble-menu .panel-body-contents {
  height: 100%;
}

/* Admin styles */
.babble-admin-disabled {
  font-weight: bold;
  text-align: center;
}

/* Discourse overrides */
@media (min-width: 700px) {
  .babble-post       button.dropdown-toggle { opacity: 0; }
  .babble-post:hover button.dropdown-toggle { opacity: 1; }
}

li.babble-chat.drop-container {
  margin: 0;
  display: inline-block;
  position: relative;
  .badge-category {
    padding: 6px 12px;
    width: 150px;
    display: inline-block;
    line-height: 18px;
  }
  .badge-category.category-dropdown-button {
    margin-left: -4px;
    padding: 6px 7px 6px 0;
    width: 6px;
  }
  .category-dropdown-menu {
    border: none;
    background: dark-light-diff($primary, $secondary, 90%, -65%);
    width: 100%;
    position: absolute;
    z-index: 3000;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
    .cat {
      width: 100%;
    }
    .cat:first-of-type {
      display: none;
    }
    .cat:hover {
      background-color: dark-light-diff($primary, $secondary, 90%, -65%);
    }
    .badge-wrapper {
      display: block;
    }
  }
}

